--- a/project.ipynb
+++ b/project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,68 +39,56 @@
     }
    ],
    "source": [
-    "print(pd.__version__)\n",
+    "\n",
+    "##DATA PROCESSING RULES FOR WALMART SALES DATA\n",
+    "## \n",
+    "\n",
+    "### 1 CHECK TOTAL COLUMNS & DATA TYPES\n",
+    "### - Ensure all expected columns are present.\n",
+    "## #- Verify each column has the correct data type.\n",
+    "\n",
+    "### 2 CHECK IF THE FILE IS EMPTY\n",
+    "### - Validate that the file exists and is not empty before processing.\n",
+    "\n",
+    "### 3 VALIDATE MANDATORY COLUMNS\n",
+    "### - Ensure required columns (invoice_id, branch, category, unit_price, quantity, date) exist.\n",
+    "### - Check that numeric columns do not contain NULL values.\n",
+    "\n",
+    "### 4 ENSURE COLUMNS HAVE THE CORRECT DATA TYPES\n",
+    "### - invoice_id: Integer\n",
+    "### - unit_price, profit_margin: Float\n",
+    "### - date: Datetime format\n",
+    "### - category, payment_method: String\n",
+    "\n",
+    "### 5  VALIDATE INVOICE ID FORMAT\n",
+    "### - Invoice ID should contain only digits (0-9).\n",
+    "### - Reject invoice IDs with letters, special characters, or missing values.\n",
+    "\n",
+    "### 6 HANDLE MISSING DATA\n",
+    "### - Identify missing values using null checks.\n",
+    "### - Drop or fill missing values for critical fields.\n",
+    "### - Log missing values before and after data cleaning.\n",
+    "\n",
+    "### 7 REMOVE DUPLICATE ENTRIES\n",
+    "### - Detect duplicate records in the dataset.\n",
+    "### - Remove duplicate entries while maintaining data integrity.\n",
+    "### - Log the number of duplicates removed.\n",
+    "\n",
+    "### 8 STANDARDIZE DATA FORMATTING\n",
+    "### - Convert column names to lowercase and replace spaces with underscores.\n",
+    "### - Trim leading/trailing spaces in text fields.\n",
+    "### - Convert currency values to numeric format if applicable.\n",
+    "\n",
+    "### 9 EXPORT THE CLEANED DATA\n",
+    "### - Save the cleaned data as 'walmart_clean_data.csv' or upload it to PostgreSQL.\n",
+    "### - Ensure the final dataset is free of invalid data.\n",
+    "### - Log the final row count and file size.\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# ===========================================\n",
-    "# DATA PROCESSING RULES FOR WALMART SALES DATA\n",
-    "# ===========================================\n",
-    "\n",
-    "# 1️⃣ CHECK TOTAL COLUMNS & DATA TYPES\n",
-    "# - Ensure all expected columns are present.\n",
-    "# - Verify each column has the correct data type.\n",
-    "\n",
-    "# 2️⃣ CHECK IF THE FILE IS EMPTY\n",
-    "# - Validate that the file exists and is not empty before processing.\n",
-    "\n",
-    "# 3️⃣ VALIDATE MANDATORY COLUMNS\n",
-    "# - Ensure required columns (invoice_id, branch, category, unit_price, quantity, date) exist.\n",
-    "# - Check that numeric columns do not contain NULL values.\n",
-    "\n",
-    "# 4️⃣ ENSURE COLUMNS HAVE THE CORRECT DATA TYPES\n",
-    "# - invoice_id: Integer\n",
-    "# - unit_price, profit_margin: Float\n",
-    "# - date: Datetime format\n",
-    "# - category, payment_method: String\n",
-    "\n",
-    "# 5️⃣ VALIDATE INVOICE ID FORMAT\n",
-    "# - Invoice ID should contain only digits (0-9).\n",
-    "# - Reject invoice IDs with letters, special characters, or missing values.\n",
-    "\n",
-    "# 6️⃣ HANDLE MISSING DATA\n",
-    "# - Identify missing values using null checks.\n",
-    "# - Drop or fill missing values for critical fields.\n",
-    "# - Log missing values before and after data cleaning.\n",
-    "\n",
-    "# 7️⃣ REMOVE DUPLICATE ENTRIES\n",
-    "# - Detect duplicate records in the dataset.\n",
-    "# - Remove duplicate entries while maintaining data integrity.\n",
-    "# - Log the number of duplicates removed.\n",
-    "\n",
-    "# 8️⃣ STANDARDIZE DATA FORMATTING\n",
-    "# - Convert column names to lowercase and replace spaces with underscores.\n",
-    "# - Trim leading/trailing spaces in text fields.\n",
-    "# - Convert currency values to numeric format if applicable.\n",
-    "\n",
-    "# 9️⃣ EXPORT THE CLEANED DATA\n",
-    "# - Save the cleaned data as 'walmart_clean_data.csv' or upload it to PostgreSQL.\n",
-    "# - Ensure the final dataset is free of invalid data.\n",
-    "# - Log the final row count and file size.\n",
-    "\n",
-    "# ===========================================\n",
-    "# END OF DATA PROCESSING RULES\n",
-    "# ===========================================\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +103,7 @@
     }
    ],
    "source": [
+    "# read the file\n",
     "file_path = r\"C:\\Users\\yams2\\OneDrive\\Desktop\\project walmart\\walmart-10k-sales-datasets\\Walmart.csv\"\n",
     "\n",
     "df = pd.read_csv(file_path, encoding_errors='ignore' )\n",
@@ -967,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +973,8 @@
     }
    ],
    "source": [
-    "df.columns = df.columns.str.lower()\n",
+    "# case sensitive\n",
+    "# df.columns = df.columns.str.lower()\n",
     "df.columns"
    ]
   },
